sumo/tests/traci/get_variable/ArealDetector/errors/UnknownAD/testclient.prog
simstep2 48
getvariable 0xad 0x18 xxx
simstep2 49
